Fixed menu bar on index.html

--- a/AncestryCodeTestFrontend/index.html
+++ b/AncestryCodeTestFrontend/index.html
@@ -9,8 +9,10 @@
 <body>
   <div class="top-bar">
     <div class="top-bar-left">
-        <li class="menu-text">Ancestry Experiance Survey</li>
-    </div>
+        <ul class="menu">
+           <li class="menu-text">Ancestry Experiance Survey</li>
+        </ul>
+      </div>
   </div>
 </body>
 </html>
