Added survey controller some minor formatting and grammer fixes too

--- a/AncestryCodeTestFrontend/index.html
+++ b/AncestryCodeTestFrontend/index.html
@@ -1,4 +1,4 @@
-<html ng-app="ancestry-experiance-survey">
+<html ng-app="ancestry-experience-survey">
 
 <head>
   <script src="./dist/bundle.js"></script>
@@ -14,5 +14,10 @@
         </ul>
       </div>
   </div>
+
+<main ng-controller="SurveyController as vm">
+{{vm.helloWorld}}
+</main>
+
 </body>
 </html>
