Added a button to open a new window
New Windows (in chrome at least) cannot be closed via JS unless they were opened using Window.open, this confirms that we'll be able to open and close the survey window

--- a/AncestryCodeTestFrontend/index.html
+++ b/AncestryCodeTestFrontend/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <main ng-controller="SurveyController as vm">
-    {{vm.helloWorld}}
+    <button class="button" ng-click="vm.openNewWindow()">Open New Window</button>
   </main>
 
 </body>
