Frontend: Added thankyou page

--- a/AncestryCodeTestFrontend/index.html
+++ b/AncestryCodeTestFrontend/index.html
@@ -15,7 +15,10 @@
     </div>
   </div>
 <a  ui-sref="survey">Click me to see the survey</a>
- <ui-view></ui-view>
+
+<div class="row main-wrapper">
+  <ui-view></ui-view>
+</div>
 
 </body>
 </html>
