--- a/AncestryCodeTestFrontend/index.html
+++ b/AncestryCodeTestFrontend/index.html
@@ -8,17 +8,14 @@
 
 <body>
   <div class="top-bar">
-    <div class="top-bar-left">
+    <div class="float-center">
       <ul class="menu">
         <li class="menu-text">Ancestry Experiance Survey</li>
       </ul>
     </div>
   </div>
-<a  ui-sref="survey">Click me to see the survey</a>
-
 <div class="row main-wrapper">
   <ui-view></ui-view>
 </div>
-
 </body>
 </html>
