Frontend: Survey Flow completed

--- a/AncestryCodeTestFrontend/app/states/survey/thank-you-page/thank-you.html
+++ b/AncestryCodeTestFrontend/app/states/survey/thank-you-page/thank-you.html
@@ -2,7 +2,8 @@
   <h5>Your response has been sent to our marketing team</h5>
   <p>Thank you for taking the time to take our survey.</p>
 <div class="callout-actions">
-    <button class="button primary">Return to Ancestry</button><button class="hollow button secondary" href="#">Close window</button>
+    <button ng-show="vm.originUrl" ng-click="vm.navigateBackToOrigin()" class="button primary">Return to Ancestry</button>
+    <button class="button secondary float-right" ng-click="vm.closeWindow()" href="#">Close window</button>
 </div>
 </div>
 
