--- a/AncestryCodeTestFrontend/index.html
+++ b/AncestryCodeTestFrontend/index.html
@@ -15,7 +15,15 @@
     </div>
   </div>
 <div class="row main-wrapper">
-  <ui-view></ui-view>
+  <ui-view class="float-center"></ui-view>
 </div>
 </body>
+
+<script >
+    var navigateToSurvey = function(){
+    var url = "http://localhost:8080/#!/experiance-survey?originUrl=" + encodeURIComponent(location.href);
+    window.open(url);
+  }
+</script>
+
 </html>
