--- a/AncestryCodeTestFrontend/index.html
+++ b/AncestryCodeTestFrontend/index.html
@@ -8,9 +8,11 @@
 
 <body>
   <div class="top-bar">
-    <div class="float-center">
+    <div class="top-bar-left">
       <ul class="menu">
         <li class="menu-text">Ancestry Experiance Survey</li>
+        <li class="menu-text"  ui-sref="home"  ui-sref-active="active"><a>Home</a></li>
+        <li class="menu-text" ui-sref="marketing"  ui-sref-active="active"><a ui-sref="marketing">Marketing</a></li>
       </ul>
     </div>
   </div>
